<resources>
    <string name="app_name">金刚</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_enter">登录</string>
    <string name="login_register">注册</string>
    <string name="title_activity_settings">Settings</string>

    <string name="shortcut_short_prompt">我是短的提示</string>
    <string name="shortcut_long_prompt">我是长的提示</string>

    <string name="shortcut_display_prompt">我就不想让你看见</string>
    <string name="login_login_hint">输入注册手机号/注册账号</string>
    <string name="login_forget_password"><u>忘记密码</u></string>
    <string name="trailer_sos">SOS</string>
    <string name="trailer_task">任务</string>
    <string name="trailer_customer">客户</string>
    <string name="trailer_my">我的</string>
    <string name="telephone_urged">电催信息</string>
    <string name="family_visit">家访信息</string>
    <string name="trailer_information">拖车信息</string>
    <string name="case_information">案件信息</string>
    <string name="customer_information">客户信息</string>
    <string name="task">任务</string>
    <string name="task_detail">任务详情</string>
    <string name="for_task">进行中的任务</string>
    <string name="new_task">新分配的任务</string>
    <string name="new_task_count">新分配</string>
    <string name="complete_task">已完成</string>
    <string name="complete">完成</string>
    <string name="unfinished">未完成</string>
    <string name="other_task">其他</string>

    <string name="load_end_tip">已经全部加载完毕</string>
    <string name="load_loading_tip">努力加载中</string>
    <string name="load_failed_tip">点我再试试？</string>
    <string name="start_task">开始任务</string>
    <string name="traialer_navigation">拖车导航</string>
    <string name="trailer_dot">拖车打点</string>
    <string name="trailer_over">拖车完成</string>
    <string name="send_car_library">送车入库</string>
    <string name="vehicle_localization">车辆定位</string>
    <string name="on_going">进行中</string>
    <string name="expect_completion_time">预计完成时间</string>
    <string name="start">开始</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="submit">提 交</string>
    <string name="pause">暂停</string>
    <string name="go_on">继续</string>
    <string name="give_up">放弃</string>

    <!-- permissions prompt-->
    <string name="read_phone_state">登录前必须获得读取手机状态和位置的权限</string>
    <string name="setting_read_phone_state">请到设置中授权读取手机状态和位置的权限</string>
    <string name="location_group_and_storage">必须授权位置和存储空间的权限</string>
    <string name="setting_group_and_storage">请到设置中授权位置和存储空间的权限</string>
    <string name="all_task_type">所有分类</string>
    <string name="task_number">任务数</string>
    <string name="task_query">任务查询</string>
    <string name="complete_number">完成量</string>
    <string name="message_notificaton">消息通知</string>
    <string name="exit_account">退出账号</string>
    <string name="personal_data_setting">个人资料设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_cango_trailer">关于灿谷拖车</string>
    <string name="copyright_information">版权信息</string>
    <string name="software_licensing_agreement">软件许可使用协议</string>
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="unable_login">无法登录</string>
    <string name="no_account_and_register">没有账号？立即注册</string>
    <string name="head">头像</string>
    <string name="sex">性别</string>
    <string name="birthday">生日</string>
    <string name="phone">手机</string>
    <string name="weixin">微信</string>
    <string name="personal_data">个人资料</string>
    <string name="company_name">上海灿谷投资管理咨询服务有限公司</string>
    <string name="next_step">下一步</string>
    <string name="next_setp_prompt">轻触上面的“下一步”，即表示您同意</string>
    <string name="book_left_tag">《</string>
    <string name="book_right_tag">》</string>
    <string name="trailer_agreement">灿谷拖车注册协议</string>
    <string name="sms_title">完成注册</string>
    <string name="sms_prompt">验证码已经发送到您老板的手机，保留至24小时，如果长时间未收到。</string>
    <string name="plase_input_sms_code">请输入短信验证码</string>
    <string name="plase_setting_account_password">请设置6-20位账号密码</string>
    <string name="title_activity_forget_password">ForgetPasswordActivity</string>
    <string name="send_car_to_library">送车入库</string>
    <string name="background_notice_prompt">后台通知车主本人</string>
    <string name="notice_now">立即通知</string>
    <string name="query">查询</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="cango_manager">金刚</string>
    <string name="title_activity_staiff">StaiffActivity</string>
    <string name="staiff_group">员工分组</string>
    <string name="group_leader">组长</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="plase_input_group_name">请输入您的小组名称</string>
    <string name="all_member">所有成员</string>
    <string name="please_select_group_leader">请选择您的小组组长</string>
    <string name="select_date">选择日期</string>
    <string name="run_speed">运行速度</string>
    <string name="register_username_not_null">注册用户名不能为空！</string>
    <string name="people">李先生</string>
    <string name="contract_no">合同号:</string>
    <string name="entrust_letter">委托函</string>
    <string name="trailer_specification">拖车任务书</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="unread">未读</string>
    <string name="read">已读</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="native_file">本机文件</string>
    <string name="download">下载</string>
    <string name="editor">编辑</string>
    <string name="toview">查看</string>
    <string name="share">分享</string>
    <string name="upload_photo">上传照片</string>
    <string name="check_all">全选</string>
    <string name="new_group">新建分组</string>
    <string name="revulsion">抽回</string>
    <string name="update_group">修改分组</string>
    <string name="please_input_all_message">请填写完整信息！</string>
    <string name="please_input_search_conditions">请输入至少一个搜索条件！</string>
    <string name="phone1">13162315225</string>
    <string name="no_get_location">未能获取位置，请稍后尝试！</string>
    <string name="put_sim_and_permissions">插入sim卡或开启相关权限！</string>
    <string name="start_now">立即体验</string>
    <string name="first_question">1.车辆从何人手中收回</string>
    <string name="second_question">2.车辆以何种手段收回</string>
    <string name="three_question">3.拖车时有何冲突情况</string>
</resources>
