<?xml version="1.0" encoding="utf-8"?>
<shortcuts
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_short_prompt"
        android:shortcutLongLabel="@string/shortcut_long_prompt"
        android:shortcutDisabledMessage="@string/shortcut_display_prompt"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.cango.palmcartreasure"
            android:targetClass="com.cango.palmcartreasure.defaultrole.MainActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>