<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="36px"
            android:layout_height="39px"
            android:src="@drawable/telephone_urged"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:text="@string/telephone_urged"
            android:textSize="28px"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="39px"
            android:layout_height="36px"
            android:src="@drawable/family_visit"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:textSize="28px"
            android:text="@string/family_visit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="48px"
            android:layout_height="36px"
            android:src="@drawable/trailer_information"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:textSize="28px"
            android:text="@string/trailer_information"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="33px"
            android:layout_height="39px"
            android:src="@drawable/case_information"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:textSize="28px"
            android:text="@string/case_information"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:layout_width="39px"
            android:layout_height="36px"
            android:src="@drawable/customer_information"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15px"
            android:textSize="28px"
            android:text="@string/customer_information"/>
    </LinearLayout>
</LinearLayout>