<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cango.palmcartreasure.login.LoginFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_register">

        <ImageView
            android:id="@+id/iv_register_logo"
            android:layout_width="213px"
            android:layout_height="213px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="117px"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_register_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20px"
            android:text="CANGO"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/rl_register_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_register_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170px"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="150px"
            android:paddingRight="150px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138px"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="23px">

                <ImageView
                    android:layout_width="46px"
                    android:layout_height="45px"
                    android:src="@drawable/sign_in" />

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25px"
                    android:background="@android:color/transparent"
                    android:gravity="bottom"
                    android:hint="@string/login_login_hint"
                    android:textColorHint="@color/etHint"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_next_step"
            android:layout_width="600px"
            android:layout_height="107px"
            android:layout_below="@+id/rl_register_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="172px"
            android:background="@drawable/button_press_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/ll_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_next_step"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70px">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已有账号，请"
                android:textColor="@color/mt646464"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="登录"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_next_step_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_register_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32px"
            android:text="@string/next_setp_prompt"
            android:textColor="@color/mt646464"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_next_step_prompt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32px"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_left_tag"
                android:textColor="@color/mt646464"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer_agreement"
                android:textColor="@color/mtf0b365"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_right_tag"
                android:textColor="@color/mt646464"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52px"
        android:text="@string/company_name"
        android:textColor="@color/mt646464"
        android:textSize="12sp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />
</RelativeLayout>
