<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cango.palmcartreasure.login.LoginFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_forget"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbar_bg"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_forget_password"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_forget">


        <LinearLayout
            android:id="@+id/ll_forget_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80px"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="150px"
            android:paddingRight="150px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="138px"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingBottom="23px">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="bottom|center_horizontal"
                    android:hint="@string/login_login_hint"
                    android:textColorHint="@color/etHint"
                    android:textSize="15sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line" />

        </LinearLayout>

        <TextView
            android:layout_width="600px"
            android:layout_height="107px"
            android:layout_below="@+id/ll_forget_edit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190px"
            android:background="@drawable/button_press_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="13sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52px"
        android:text="@string/company_name"
        android:textColor="@color/mt646464"
        android:textSize="12sp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />
</RelativeLayout>
